<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="20dp"
            android:text="@string/cabins" />

        <Spinner
            android:id="@+id/num_cabins"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/boat_age" />

        <EditText
            android:id="@+id/text_age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/boat_price"
            android:onClick="onMyClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/show_price" />

        <TextView
            android:id="@+id/yacht_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/underline" />
    </LinearLayout>


</LinearLayout>